--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "delatbabel/fluents": "~1.0",
-        "delatbabel/nestedcategories": "~1.1",
-        "delatbabel/keylists": "~1.5"
+        "ngoubaux/delatbabel-fluents": "^11.0",
+        "ngoubaux/delatbabel-nestedcategories": "^11.0",
+        "ngoubaux/delatbabel-keylists": "^11.0"
     },
     "autoload": {
         "psr-4": {
